rev 463 (2015-08-07)
- 'public' flag from pledge database is now respected: if public=0 the pledge does not show in the public version of the calculator (always shows in the -dev version)
- Excel download now allows for list of distinct years (as opposed to just ranges) for download, via dl_years (with | separated list) URL param or "advanced Excel download" UI in dev calc
- implemented new 'labels_match_scale' in graph_core module which allows for axis labels to be matched to the user-defined/hard-coded/pre-calculated (y-)axis dimensions passed to the module
- some hacks in graph_core module related to secondary y-axis
- '_graph-test' directory renamed to 'charts'
- started implementing interactive chart legend in 'charts'
- added styling for area below the x-axis to country_graphs.css
- added CHANGELOG file to keep track of changes between and across commits

rev 462 (2015-07-12)
- version numbers for js and css (and some png) files to facilitate longer browser caching
- a bunch of new code for generating "The Big Chart" (single country graph with effort sharing and resource sharing wedges) for INDC assessments

rev 461 (2015-07-02) (toma-ecoequity)
- New legend text

rev 460 (2015-07-02) (krueschan)
- still testing to include svn commit data in config.php for run time use

rev 459 (2015-07-02) (krueschan)
- testing to include svn commit data in config.php for run time use
- optimized png header images for faster pageload
- removed some abandoned code from index.php
- private.properties file updated with post-move file locations

rev 458 (2015-07-02) (krueschan)
- made several minor changes to graph css; generally moving to class-based rather than id-based svg styling
- expansions to graph-core module for future functionality (ignore specific series for common series, added class based styling (can now pass css class for each glyph, data series or wedge), output can be to file or directly as svg code)