@@ -181,29 +181,35 @@ $equity_nosplash = $equity_nosplash || isset($_GET['iso3']);
                                 </select>
                             </li>-->
                         </li>
-                        <li id="cum_since_yr_wrapper">
-                            <?php echo select_num('cum_since_yr', $shared_params, $glossary->getLink('cum_respons', false, _('Cumulative since')) . ": "); ?>
+                        
+                        <li class="advanced"><fieldset class="responsibility">
+                        <legend class="open"><span>&nbsp;</span><?php echo $glossary->getLink('gloss_responsibility', false, _('Responsibility')); ?></legend> 
+                        <ul class="group">
+                            <li id="cum_since_yr_wrapper">
+                                <?php echo select_num('cum_since_yr', $shared_params, $glossary->getLink('cum_respons', false, _('Cumulative since')) . ": "); ?>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="use_lulucf" id="use_lulucf" class="click" value="1" <?php if ((int) $shared_params["use_lulucf"]['value'] === 1)
+                                echo 'checked="checked"'; ?>  />
+                                <label for="use_lulucf" class="click"> <?php echo sprintf(_('Include %s'), $glossary->getLink('lu_emissions', false, _('land-use emissions'))); ?></label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="use_nonco2" id="use_nonco2" class="click" value="1" <?php if ((int) $shared_params["use_nonco2"]['value'] === 1)
+                               echo 'checked="checked"'; ?>  />
+                                <label for="use_nonco2" class="click"> <?php echo sprintf(_('Include %s'), $glossary->getLink('non_co2_gases', false, _('non-CO<sub>2</sub> gases')));?></label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="use_netexports" id="use_netexports" class="click" value="1" <?php if ((int) $shared_params["use_netexports"]['value'] === 1)
+                               echo 'checked="checked"'; ?>  />
+                                <label for="use_netexports" class="click"> <?php echo sprintf(_('Include %s'), $glossary->getLink('embodied_emissions', false, _('emissions embodied in trade'))); ?></label>
+                            </li>
+                                </li><?php echo select_num('r_wt', $fw_params, $glossary->getLink('r_weight', false, _('Responsibility weight')) . ":"); ?>
+                            <li>
+                        </ul>
+                        </fieldset>
                         </li>
-                        <li>
-                            <input type="checkbox" name="use_lulucf" id="use_lulucf" class="click" value="1" <?php if ((int) $shared_params["use_lulucf"]['value'] === 1)
-                            echo 'checked="checked"'; ?>  />
-                            <label for="use_lulucf" class="click"> <?php echo sprintf(_('Include %s'), $glossary->getLink('lu_emissions', false, _('land-use emissions'))); ?></label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="use_nonco2" id="use_nonco2" class="click" value="1" <?php if ((int) $shared_params["use_nonco2"]['value'] === 1)
-                           echo 'checked="checked"'; ?>  />
-                            <label for="use_nonco2" class="click"> <?php echo sprintf(_('Include %s'), $glossary->getLink('non_co2_gases', false, _('non-CO<sub>2</sub> gases')));?></label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="use_netexports" id="use_netexports" class="click" value="1" <?php if ((int) $shared_params["use_netexports"]['value'] === 1)
-                           echo 'checked="checked"'; ?>  />
-                            <label for="use_netexports" class="click"> <?php echo sprintf(_('Include %s'), $glossary->getLink('embodied_emissions', false, _('emissions embodied in trade'))); ?></label>
-                        </li>
+                                    
                         <?php
-                            echo "<li>";
-                            echo select_num('r_wt', $fw_params, $glossary->getLink('r_weight', false, _('Responsibility weight')) . ":");
-                            echo "</li>";
-
                             // Progressivity
                             echo '<li class="advanced"><fieldset class="progressivity">';
                             echo '<legend class="closed"><span>&nbsp;</span>' . $glossary->getLink('progressivity', false, _('Progressivity')) . '</legend>';
